<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_FBCoESetPositionOffsetIO" Id="{490272c2-877f-494c-8bee-4cb06a7d96cd}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									18.05.2018
//	Struktura zawierajaca I/O odpowiedniego bloku
//  v1.0	|| TC v 3.1.4022.16		|| - pierwsza wersja
//==================================================================================================
TYPE ST_FBCoESetPositionOffsetIO:
STRUCT
	bExecute						: BOOL;								// Rising edge executes cmd
	lrPosition						: LREAL;
	bRelative						: BOOL;
	eFeedback						: Tc2_MC2_Drive.E_PositionOffsetFeedback;
	eMemory							: Tc2_MC2_Drive.E_PositionOffsetMemory;
	bBusy							: BOOL;
	bError							: BOOL;
	udiErrorID						: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>